# langchain_course

./: .gitignore
code-interpreter/: .gitignore  README.md  main.py  pyproject.toml
documentation-helper/: .gitignore  pyproject.toml
documentation-helper/backend/: core.py
documentation-helper/documentation_helper/: consts.py  ingestion.py  main.py
documentation-helper/documentation_helper/backend/: core.py
ice_breaker/: .flake8  ice_breaker.py  output_parsers.py  pyproject.toml
ice_breaker/agents/: linkedin_lookup_agent.py
ice_breaker/third_parties/: linkedin.py
intro-to-vector-db/: .gitignore  main.py  pyproject.toml
intro-to-vector-db/mediumblogs/: mediumblog1.txt
react-langchain/: .flake8  README.md  Taskfile.yml  callbacks.py  main.py  pyproject.toml
vectorstore-in-memory/: .gitignore  main.py  pyproject.toml
