[tool.poetry]
name = "ice-breaker"
version = "0.1.0"
description = "Ice Breaker demo app from the LangChain course"
authors = ["Erick Cardenas <erick.mendez@toptal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.3"
langchain-openai = "^0.0.3"
google-search-results = "^2.4.2"
langchainhub = "^0.1.14"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
darglint = "^1.8.1"
flake8-bugbear = "^24.1.17"
flake8-comprehensions = "^3.14.0"
flake8-import-order = "^0.18.2"
pep8-naming = "^0.13.3"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110 # 10% more than flake8 max-line-length, to use bugbear B950 error code
target-version = ['py311'] # match with .python-version

[tool.isort]
profile = "black"
